--- a/feedr-starter-code/styles/style.css
+++ b/feedr-starter-code/styles/style.css
@@ -30,8 +30,10 @@
 }
 
 #popUp.loader .container {
-  display: none;
+  display:none ;
 }
+
+
 
 #popUp .container {
   margin-top: 80px;
@@ -235,3 +237,13 @@ nav ul ul li {
   text-align: right;
   color: #097FB2;
 }
+
+.loader {
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            background: url('/yourimagefolder/loading.gif') 50% 50% no-repeat rgb(249,249,249);
+        }
