--- a/feedr-starter-code/styles/style.css
+++ b/feedr-starter-code/styles/style.css
@@ -4,6 +4,12 @@
   margin: 0 auto;
 }
 
+#desc{
+    max-height: 200px;
+    overflow-y: scroll;
+    background:#f99;
+}
+
 #popUp {
   opacity: 0.95;
   position: absolute;
