--- a/feedr-starter-code/styles/style.css
+++ b/feedr-starter-code/styles/style.css
@@ -12,6 +12,8 @@
   width: 100%;
   height: 100%;
   background:  #fff;
+      display: none;
+
 }
 
 #popUp .closePopUp {
@@ -21,16 +23,20 @@
   font-size: 40px;
   color: #FE052C;
   text-decoration: none;
+    display: none;
+
 }
 
-#popUp.loader {
-  background-image: url(../images/ajax_loader.gif);
-  background-repeat: no-repeat;
+#popUp.loaderHidden {
+/*  background-image: url(../images/ajax_loader.gif);
+*/  background-repeat: no-repeat;
   background-position: center center;
+    display: none;
+
 }
 
-#popUp.loader .container {
-  display: none;
+#popUp.loaderHidden .container {
+  display: block;
 }
 
 #popUp .container {
